--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,13 @@ body {
     background-size: cover;
 }
 
+.title {
+    margin-top: 100px;
+    font-size: 2.5rem;
+    text-align: center;
+    color: #042e62;
+}
+
 .header ul {
     margin: 50px 0 0;
     padding: 0;
