--- a/public/style.css
+++ b/public/style.css
@@ -153,7 +153,8 @@ table tbody tr:nth-child(2n) {
 
 table tbody td {
     width: 150px;
-    padding: 5px 3px 5px 6px;
+    height: 28px;
+    /* padding: 5px 3px 5px 6px; */
     vertical-align: middle;
     text-align: center;
     border: 1px solid #042e62;
