--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,9 @@ body {
     background-size: cover;
     user-select: none;
 }
+.container {
+    position: relative;
+}
 
 .title {
     margin-top: 50px;
@@ -164,4 +167,43 @@ table tbody td {
 span.divSortTable::after .asc {
     content: '&darr;';
     width: 5px;
+}
+
+// Spinner
+
+.lds-ring {
+    display: inline-block;
+    position: relative;
+    width: 34px;
+    height: 34px;
+}
+.lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    left: 45%;
+    width: 34px;
+    height: 34px;
+    margin: 6px;
+    border: 6px solid #fff;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: #fff transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
